app/assets/stylesheets/partials/modules/_filters.scss
/* ======================================================================================
   @MODULES -> FILTERS
   ====================================================================================== */

/*
  Usage:
    Filters and sorting, used for browsing 'Products'.

  Note:
    A lot of styles are being used from the 'Drop down menu' module.

  Demo:
    Style Guide -> Modules -> Filters
*/

.filters {

  /* Hide elements at 'wide' layout at this breakpoint */
  @include respond-min($lap-lrg) {
    .filters__hide-wide {display: none;}
  }

  /* Overrides for 'Drop down menu trigger' at this breakpoint range */
  @include respond-range($non-palm, $lap-lrg - 1) {
    .drop-down-menu__trigger {@include font-size($font-size, normal)}
  }

  /* Overrides for 'Drop down menu target' */
  .drop-down-menu__target {

    /* Reduce the width at this breakpoint range */
    @include respond-range($non-palm, $lap-lrg - 1) {
      @include to-rem(width, $drop-down-width);
    }

    /* Bring into view and remove 'box' styles at this breakpoint */
    @include respond-min($lap-lrg) {
      width: 100%;
      display: block;
      position: static;
      background: none;
      box-shadow: none;

      /* Hide drop down pointer arrow */
      &:before {display: none;}
    }
  }
}

/* --Extenders-- */

/* When used for pin board */
.filters--pin-board {
  @include to-rem(margin-top, $spacing-half);

  /* Increase top margin at this breakpoint */
  @include respond-min($non-palm) {
    @include to-rem(margin-top, $spacing-base);
  }
}

  /* Contain filters and sort */
  .filters__filter-sort {position: relative;}

    /* Throw list into horizontal mode at this breakpoint */
    @include respond-min($lap-lrg) {
      .filters__list > li {
        display: inline-block;
        vertical-align: middle;
        position: relative;
        @include to-rem(margin-right, $spacing-micro);

        /* Turn off right margin for last child */
        &:last-child {margin-right: 0;}

        /* Old IE */
        @include old-ie {
          @include to-rem(margin-right, $spacing-quarter);
        }
      }
    }

      /* Filter trigger (drop down trigger) - we need to toggle the display of the triggers between viewports as we have 2 triggers for each */
      .filters__trigger {

        &.filters__trigger--wide {display: none !important;}

        @include respond-min($lap-lrg) {
          &.filters__trigger--narrow {display: none !important;}

          &.filters__trigger--wide {display: block !important;}
        }
      }

      /* --Filters target-- */

      /* Remove the drop down pointer arrow at this breakpoint */
      @include respond-max($lap-lrg - 1) {
        .filters__target.pointer-up:before {display: none;}
      }

      /* Make into drop down at this breakpoint */
      @include respond-min($lap-lrg) {
        .filters__target {
          @include drop-down;
          @include box;
          @include box-drop-down;
          @include to-rem(width, $drop-down-width);
          @include to-rem(margin-top, 10);

          /* Reduce the top margin for IE 9/8 */
          .ie-9 &,
          .old-ie & {@include to-rem(margin-top, 4);}

          /* Old IE */
          @include old-ie {
            border: 1px solid $color-grey-light-2;
            border-bottom-width: 2px;
          }
        }
      }

    /* Sort */
    .filters__sort {
      @include font-size($font-size-sml);
      position: absolute;
      top: 50%;
      right: 0;
      @include translate(0, -50%);

      /* Old IE */
      @include old-ie {
        top: 0;
      }
    }

